@@ -1,13 +1,13 @@
 Package: pould
 Title: Phased or Unphased Linkage Disequilibrium
-Version: 0.6.2.9000
+Version: 0.6.3.9000
 Authors@R: person("Steven", "mack", email = "sjmack@chori.org", role = c("aut", "cre"))
-Description: Computes the D', Wn, and conditional ALD measures pairs of genetic loci. Performs these LD calculations on phased HLA genotype data recorded using GL String format. Alternatively generates Expectation-Maximization estimated haplotypes from phased data, or performs LD calculations on EM estimated haplotypes. Described by Osoegawa et al. 2018.
+Description: Computes the D', Wn, and conditional ALD measures pairs of genetic loci. Performs these LD calculations on phased HLA genotype data recorded using GL String format. Alternatively generates Expectation-Maximization estimated haplotypes from phased data, or performs LD calculations on EM estimated haplotypes. Perfoms sign tests comparing LD values for phased and unphased datasets. Described by Osoegawa et al. 2018.
 Depends: R (>= 3.5.0)
 License: GPL (>= 3)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1
+RoxygenNote: 6.1.0
 Imports: haplo.stats,gap,stats,utils
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
