@@ -15,9 +15,11 @@ knitr::opts_chunk$set(
 ```
 
 # pould 
-v0.6.2.9000 (June 28, 2018)
+v0.6.3.9000 (September 24, 2018)
 
 The *pould* package calculates four linkage disequilibrium (LD) statistics -- *D<sup>'</sup>*, *W<sub>n</sub>* and the two conditional asymmetric LD (cALD) measures, *W<sub>A/B</sub>* and *W<sub>B/A</sub>* -- for genotype data from pairs of genetic loci, and can treat these data as either phased or unphased for these calculations. In addition, *pould* includes a wrapper function (*LDWrap()*) that parses multi-locus HLA haplotypes reported in the 17th International HLA and Immunogenetics Workshop (IHIW) Family Haplotype Project's HaplObserve output format, as well as *LD.sign.test()*, a function that applies a sign test to LD values for phased and unphased haplotypes generated by *LDWrap()* for a given dataset. For more information about cALD, see: Thomson G, Single RM. **Conditional asymmetric linkage disequilibrium (ALD): extending the biallelic r2 measure.** [Genetics. 2014;198(1):321-31](https://doi.org/10.1534/genetics.114.165266).
+
+The *pould* package can be installed from GitHub using the R *devtools* package --  `devtools::install_github("IHIW/pould/pould")`.
 
 ## Example
 In addiiton to simply calculating LD values, *pould* can be used to compare LD for phased and unphased versions of the same dataset, e.g., to examine the extent to which phasing via segregation analysis impacts LD relative to phasing estimation via the expectation-maximization (EM) algorithm. In the example below, DRB1 and DQB1 genotype data were extracted from six-locus haplotypes that had been phased using the EM method ([Mack et al. Genes Immun. 2018](https://doi.org/10.1038/s41435-017-0006-8)). In the first application of *cALD()*, that phasing information is ignored, and the EM algorithm is applied to estimate haplotypes. In the second application of *cALD()*, the original six-locus phasing information is retained.
