@@ -2,9 +2,11 @@
 pould
 =====
 
-v0.6.2.9000 (June 28, 2018)
+v0.6.3.9000 (September 24, 2018)
 
 The *pould* package calculates four linkage disequilibrium (LD) statistics -- *D<sup>'</sup>*, *W<sub>n</sub>* and the two conditional asymmetric LD (cALD) measures, *W<sub>A/B</sub>* and *W<sub>B/A</sub>* -- for genotype data from pairs of genetic loci, and can treat these data as either phased or unphased for these calculations. In addition, *pould* includes a wrapper function (*LDWrap()*) that parses multi-locus HLA haplotypes reported in the 17th International HLA and Immunogenetics Workshop (IHIW) Family Haplotype Project's HaplObserve output format, as well as *LD.sign.test()*, a function that applies a sign test to LD values for phased and unphased haplotypes generated by *LDWrap()* for a given dataset. For more information about cALD, see: Thomson G, Single RM. **Conditional asymmetric linkage disequilibrium (ALD): extending the biallelic r2 measure.** [Genetics. 2014;198(1):321-31](https://doi.org/10.1534/genetics.114.165266).
+
+The *pould* package can be installed from GitHub using the R *devtools* package -- `devtools::install_github("IHIW/pould/pould")`.
 
 Example
 -------
@@ -18,11 +20,11 @@ By comparing the resulting LD values, it becomes clear that LD is uniformy *lowe
 library("pould")
 data(drb1.dqb1.demo)
 cALD(drb1.dqb1.demo,inPhase=FALSE)
-#> Calculating D', Wn and conditional ALD for 54 unphased genotypes at the DRB1 and DQB1 loci.
-#> D' for DRB1~DQB1 haplotypes: 0.958463913193059 (0.9585) 
-#> Wn for DRB1~DQB1 haplotypes: 0.811184857814101 (0.8112) 
-#> Variation of DQB1 conditioned on DRB1 (WDQB1/DRB1) = 0.903301207345161 (0.9033)
-#> Variation of DRB1 conditioned on DQB1 (WDRB1/DQB1) = 0.778712646277049 (0.7787)
+#> Calculating D', Wn and conditional ALD for 53 unphased genotypes at the DRB1 and DQB1 loci.
+#> D' for DRB1~DQB1 haplotypes: 0.958463650643141 (0.9585) 
+#> Wn for DRB1~DQB1 haplotypes: 0.811184752616995 (0.8112) 
+#> Variation of DQB1 conditioned on DRB1 (WDQB1/DRB1) = 0.90330093936709 (0.9033)
+#> Variation of DRB1 conditioned on DQB1 (WDRB1/DQB1) = 0.778712697546294 (0.7787)
 
 cALD(drb1.dqb1.demo,inPhase=TRUE)
 #> Calculating D', Wn and conditional ALD for 106 phased genotypes at the DRB1 and DQB1 loci.
