@@ -12,7 +12,7 @@
 
 <meta name="author" content="Steven J. Mack, PhD – sjmack@chori.org" />
 
-<meta name="date" content="2018-06-28" />
+<meta name="date" content="2018-09-24" />
 
 <title>POULD: Phased Or Unphased Linkage Disequilibrium</title>
 
@@ -32,12 +32,12 @@
 
 <h1 class="title toc-ignore">POULD: Phased Or Unphased Linkage Disequilibrium</h1>
 <h4 class="author"><em>Steven J. Mack, PhD – <a href="mailto:sjmack@chori.org">sjmack@chori.org</a></em></h4>
-<h4 class="date"><em>June 28, 2018</em></h4>
+<h4 class="date"><em>September 24, 2018</em></h4>
 
 
 
 <ul>
-<li>Package Version: 0.6.2.9000</li>
+<li>Package Version: 0.6.3.9000</li>
 </ul>
 <div id="overview" class="section level1">
 <h1>Overview</h1>
@@ -69,6 +69,7 @@
         01:01          01:02           C             C
         04:01          01:01           A             C
         05:01          01:02           C             C</code></pre>
+<p><strong>Note</strong>: <em>cALD()</em> uses the <em>LDkl()</em> function from the R <em>gap</em> package. The version of the <em>gap</em> package currently in CRAN (v1.1-22) limits <em>LDkl()</em> to 100 alleles per locus. Analyses in which the product of the number of alleles at the two loci is more than 10000 will cause R to abort. This limit has been changed to 1000 alleles per locus in <em>gap</em> version 1.1-23. This version is available on GitHub, and can be installed using the <em>devtools</em> package – <code>devtools::install_github(&quot;jinghuazhao/R/gap&quot;)</code>.</p>
 </div>
 <div id="ldwrap" class="section level3">
 <h3>LDWrap</h3>
